--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: default
         <ul class="nav nav-list">
           <li class="nav-header">Related Articles</li>
           {% for related in site.related_posts limit:10 %}
-          <li><a href="{{ date.url }}">{{ related.title }}</a></li>
+          <li><a href="{{ related.url }}">{{ related.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
