--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Texas Straight Talk</a>
+          <a class="brand" href="/texas-straigh-talk/">Texas Straight Talk</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/texas-straight-talk/">All Posts</a></li>
