started isotope layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,60 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>{{ page.title }}</title>
-
-    {% if page.description %}
-      <meta name="description" content="{{ page.description }}">
-    {% endif %}
-
-    {% if page.author %}
-      <meta name="author" content="{{ page.author }}">
-    {% endif %}
-
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <link href="{{ site.baseurl }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}all.css">
     </style>
-    <link href="{{ site.baseurl }}/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="{{ site.baseurl }}">Texas Straight Talk</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><a href="{{ site.baseurl }}">All Posts</a></li>
-              <li><a href="https://github.com/steakandscotch/texas-straight-talk" target="_blank">GitHub Source</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      {{ content }}
-    </div>
-  
-    <script type="text/javascript" src="{{ site.baseurl }}/bootstrap/js/bootstrap.min.js"></script>
+    {{ content }}
+    <script type="text/javascript" src="{{ site.baseurl }}all.js"></script>
   </body>
 </html>
