--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,23 +1,12 @@
 ---
 layout: default
 ---
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span9">
-      {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
-      {% if page.author %}<h2>{{ page.author }}</h2>{% endif %}
-      {% if page.date %}<h3>{{ page.date | date: "%B %e, %Y" }}</h3>{% endif %}
-      {{ content }}
-    </div>
-    <div class="span3">
-      <div class="well sidebar-nav">
-        <ul class="nav nav-list">
-          <li class="nav-header">Related Articles</li>
-          {% for related in site.related_posts limit:10 %}
-          <li><a href="{{ site.baseurl }}{{ related.url }}">{{ related.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
+
+<article class="page">
+<header>
+<h1>{{ page.title }}</h1>
+<h2>{{ page.author }}</h2>
+<h3>{{ page.date }}</h3>
+</header>
+{{ content }}
+</article>
