Added Google Analytics tracking code.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -167,5 +167,6 @@
       Dr.  Paul's weekly column that was previously hosted on his Congressional
       web page.</p>
     </footer>
+    {% include google-analytics.html %}
   </body>
 </html>
